examples/type_system/failing/121_match_fat_arrow.flx
fn main() -> Unit {
    let x = match 1 { 0 => 0, _ => 1 }
    x
}
